--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,5 @@
-project.vendor = elnebuloso
-project.name   = flex-auth
-project.chains = php-composer-package
+project.vendor  = elnebuloso
+project.name    = flex-auth
+project.url     = https://github.com/elnebuloso/flex-auth
+project.tags    = php, components
+project.chains  = php-composer-package
