--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "elnebuloso\/flex-auth",
+    "name": "elnebuloso/flex-auth",
     "type": "library",
     "license": "MIT",
     "description": "authentication",
@@ -14,12 +14,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "elnebuloso\/flex-crypt": "~2.0"
+        "php": ">=5.4.0",
+        "elnebuloso/flex-crypt": "~3.0"
     },
     "autoload": {
         "psr-0": {
-            "Flex\\": "src\/"
+            "Flex\\": "src/"
         }
     }
 }
