--- a/build.properties
+++ b/build.properties
@@ -3,3 +3,10 @@ project.name    = flex-auth
 project.url     = https://github.com/elnebuloso/flex-auth
 project.tags    = php, components
 project.chains  = php-composer-package
+
+composer.require.php    = ^5.6 || ^7.0
+composer.name           = elnebuloso/flex-auth
+composer.description    = authentication
+composer.keywords       = authentication, cookie, encryption
+composer.type           = library
+composer.license        = MIT
